提交拓扑排序concept解，部分边界条件待研究